--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -1,8 +1,8 @@
 name: Generate JavaDoc and Deploy to Pages
 
 on:
-  push:
-    branches: [ "main" ]
+  release:
+    types: [ "released" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
