--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.5.0</version>
+				<configuration>
+					<links>
+						<link>https://bluecolored.de/bluemapapi/latest/</link>
+						<link>https://javadoc.io/doc/com.flowpowered/flow-math/1.0.3/</link>
+					</links>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
