--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -46,4 +46,4 @@ jobs:
           alert-comment-cc-users: '@TechnicJelle'
           gh-repository: 'github.com/TechnicJelle/BMUtils-PerformanceReports'
           gh-pages-branch: 'main'
-          benchmark-data-dir-path: '/'
+          benchmark-data-dir-path: './'
