--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -37,13 +37,20 @@ jobs:
           tool: 'jmh'
           output-file-path: jmh-result.json
           github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          # Set auto-push to false since GitHub API token is not given
           auto-push: true
-          # Show alert with commit comment on detecting possible performance regression
-          alert-threshold: '200%'
-          comment-on-alert: true
-          fail-on-alert: true
-          alert-comment-cc-users: '@TechnicJelle'
           gh-repository: 'github.com/TechnicJelle/BMUtils-PerformanceReports'
           gh-pages-branch: 'main'
           benchmark-data-dir-path: './'
+
+      - name: Alert on performance regression
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          name: JMH Benchmark
+          tool: 'jmh'
+          output-file-path: jmh-result.json
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          # Show alert with commit comment on detecting possible performance regression
+          alert-threshold: '200%'
+          comment-on-alert: true
+          alert-comment-cc-users: '@TechnicJelle'
+          fail-on-alert: true
