--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -54,3 +54,7 @@ jobs:
           comment-on-alert: true
           alert-comment-cc-users: '@TechnicJelle'
           fail-on-alert: true
+          # These are still necessary here for some reason:
+          gh-repository: 'github.com/TechnicJelle/BMUtils-PerformanceReports'
+          gh-pages-branch: 'main'
+          benchmark-data-dir-path: './'
