--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -48,5 +48,9 @@ jobs:
           comment-on-alert: true
           alert-comment-cc-users: '@TechnicJelle'
           fail-on-alert: true
+          save-data-file: false
           # These are still necessary here for some reason:
+          auto-push: false
+          gh-repository: 'github.com/TechnicJelle/BMUtils-PerformanceReports'
           gh-pages-branch: 'main'
+          benchmark-data-dir-path: './'
