Fix? benchmark workflow

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -6,6 +6,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+permissions:
+  # For commenting alerts on commits
+  contents: write
+
 jobs:
   benchmark:
     name: Performance regression check
