--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**bench**'
+      - '**Cheese**.java'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
