--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,10 @@
 	<version>3.0</version>
 
 	<properties>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>16</maven.compiler.source>
+		<maven.compiler.target>16</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
-	<repositories>
-		<repository>
-			<id>jitpack.io</id>
-			<url>https://jitpack.io</url>
-		</repository>
-	</repositories>
 
 	<build>
 		<plugins>
@@ -37,6 +30,18 @@
 		</plugins>
 	</build>
 
+	<repositories>
+		<repository>
+			<id>bluecolored-releases</id>
+			<name>BlueColored Repository</name>
+			<url>https://repo.bluecolored.de/releases</url>
+		</repository>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.jetbrains</groupId>
@@ -45,9 +50,9 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.BlueMap-Minecraft</groupId>
+			<groupId>de.bluecolored.bluemap</groupId>
 			<artifactId>BlueMapAPI</artifactId>
-			<version>v2.5.0</version>
+			<version>2.7.2</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -55,6 +60,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.13.2</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.bluecolored.bluemap</groupId>
+			<artifactId>BlueMapCommon</artifactId>
+			<version>5.1</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
