--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -9,6 +9,11 @@
 
 	<repositories>
 		<repository>
+			<id>bluecolored-releases</id>
+			<name>BlueColored Repository</name>
+			<url>https://repo.bluecolored.de/releases</url>
+		</repository>
+		<repository>
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
 		</repository>
@@ -19,7 +24,7 @@
 			<!-- Parent Project -->
 			<groupId>com.technicjelle</groupId>
 			<artifactId>BMUtils</artifactId>
-			<version>2.0</version>
+			<version>4.0</version>
 		</dependency>
 		<!-- The code of the benchmarks itself: -->
 		<dependency>
@@ -36,9 +41,9 @@
 		</dependency>
 		<dependency>
 			<!-- For the Shape class -->
-			<groupId>com.github.BlueMap-Minecraft</groupId>
+			<groupId>de.bluecolored.bluemap</groupId>
 			<artifactId>BlueMapAPI</artifactId>
-			<version>v2.5.0</version>
+			<version>2.7.2</version>
 		</dependency>
 		<!-- For the Benchmarks: -->
 		<dependency>
