--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 				<version>3.5.0</version>
 				<configuration>
 					<links>
-						<link>https://bluecolored.de/bluemapapi/latest/</link>
+						<link>https://repo.bluecolored.de/javadoc/releases/de/bluecolored/bluemap/BlueMapAPI/2.7.2/raw/</link>
 						<link>https://javadoc.io/doc/com.flowpowered/flow-math/1.0.3/</link>
 					</links>
 				</configuration>
