--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
 	<groupId>com.technicjelle</groupId>
 	<artifactId>BMUtils</artifactId>
-	<version>4.2.1</version>
+	<version>4.2.2</version>
 
 	<properties>
-		<java.version>16</java.version>
+		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -108,9 +108,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>de.bluecolored.bluemap</groupId>
-			<artifactId>BlueMapCommon</artifactId>
-			<version>5.2</version>
+			<groupId>de.bluecolored</groupId>
+			<artifactId>bluemap-common</artifactId>
+			<version>5.4</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
