--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -20,7 +20,7 @@
 			<!-- Parent Project -->
 			<groupId>com.technicjelle</groupId>
 			<artifactId>BMUtils</artifactId>
-			<version>4.2.2</version>
+			<version>LATEST</version>
 		</dependency>
 		<!-- The code of the benchmarks itself: -->
 		<dependency>
@@ -37,9 +37,9 @@
 		</dependency>
 		<dependency>
 			<!-- For the Shape class -->
-			<groupId>de.bluecolored.bluemap</groupId>
-			<artifactId>BlueMapAPI</artifactId>
-			<version>2.7.2</version>
+			<groupId>de.bluecolored</groupId>
+			<artifactId>bluemap-api</artifactId>
+			<version>2.7.3</version>
 		</dependency>
 		<!-- For the Benchmarks: -->
 		<dependency>
